# JNISecurity

./: .gitignore  README.md  settings.gradle
App/: build.gradle
App/src/main/: AndroidManifest.xml
App/src/main/java/com/github/gzuliyujiang/jni/demo/: MainActivity.java
JNISecurity/: CmakeLists.txt
JNISecurity/src/main/: AndroidManifest.xml
JNISecurity/src/main/cpp/: liyujiang.cpp
JNISecurity/src/main/java/com/github/gzuliyujiang/jni/: JNISecurity.java
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/github/gzuliyujiang/jni/demo/: MainActivity.java  TestApplication.java
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
lib/: CMakeLists.txt  build.gradle  proguard-rules.pro
lib/src/main/: AndroidManifest.xml
lib/src/main/cpp/: liyujiang.cpp  log.h
lib/src/main/cpp/common/: BASE64.cpp  BASE64.hpp  CBase64Coder.h  CMakeLists.txt  CommonUtils.cpp  CommonUtils.h  EmulatorDetector.cpp  EmulatorDetector.h  FileOper.cpp  FileOper.h  MD5.cpp  MD5.hpp  config.h  log.h
lib/src/main/cpp/emulator/: CMakeLists.txt  EmulatorDetector.cpp  EmulatorDetector.h
lib/src/main/cpp/json/: CMakeLists.txt  JSON.cpp  JSON.hpp
lib/src/main/cpp/util/: CMakeLists.txt  CommonUtils.cpp  CommonUtils.h  emulator_detector.cpp
lib/src/main/java/com/github/gzuliyujiang/jni/: CheckHook.java  JNISecurity.java
